[workspace]
resolver = "2"
members = ["services/*", "libs/*"]
default-members = ["services/*", "libs/*"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
http-body-util = "0.1.0"
hyper-util = { version = "0.1.1", features = ["full"] }
pretty_env_logger = "0.5.0"
serde_yaml = "0.9.27"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.20"
bytes = "1.5.0"
thiserror = "1.0.50"
getset = "0.1.2"
serde_json = "1.0.108"
clap = "4.4.18"
async-trait = "0.1.77"
futures-util = "0.3.30"
axum = "0.7.4"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19.0"
