[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
rand.workspace = true
hyper = { workspace = true, features = ["full"]}

error = { path = "../error" }
storage = { path = "../storage" }
rpc = { path = "../rpc" }
