[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
rand.workspace = true
axum.workspace = true
async-trait.workspace = true
futures-util.workspace = true
log.workspace = true
reqwest.workspace = true

error = { path = "../error" }
storage = { path = "../storage" }
rpc = { path = "../rpc" }
log_entry = { path = "../../libs/log_entry" }
