[package]
name = "consensus"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio.workspace = true
rand.workspace = true
axum.workspace = true
async-trait.workspace = true
futures-util.workspace = true
log.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
once_cell.workspace = true

error = { path = "../error" }
storage = { path = "../storage" }
log_entry = { path = "../log_entry" }
