[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
reqwest.workspace = true
hyper-util = { workspace = true, features = ["full"] }
pretty_env_logger.workspace = true
log.workspace = true
http-body-util.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
thiserror.workspace = true
getset.workspace = true
serde_json.workspace = true
serde.workspace = true

error = { path = "../../libs/error" }
config = { path = "../../libs/config" }
log_entry = { path = "../../libs/log_entry" }
