[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum.workspace = true
http-body-util.workspace = true
hyper-util = { workspace = true, features = ["full"] }
pretty_env_logger.workspace = true
serde_yaml.workspace = true
serde.workspace = true
log.workspace = true

consensus = { path = "../../libs/consensus" }
error = { path = "../../libs/error" }
rpc = { path = "../../libs/rpc" }
config = { path = "../../libs/config" }
storage = { path = "../../libs/storage" }
